Better config saving
- Save prettified json instead of minimized json.
 The toString() is mainly used when logging or debugging. Gson#toJson is the correct way to pretty print JSON with indentation and line breaks. This allows external reading of config file non-programmatically is easier for the eye, and users can paste config when for example creating a new issue as a reference easier.
 The extra space used in disk for the json file is largely irrelevant, and the space consumed in RAM is same as the prettified string is not stored, discarded after saving.

- Use Virtual Thread to save the config.
 Creating a new short-lived (platform) thread per task is largely wasteful. For years, Executors class provided us fixed, cached, scheduled thread pools - now we have even better, Virtual Threads can allow creating a thread per task with no significiant extra overhead.